policies/policy-3_cel.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-root-user
  annotations:
    policies.kyverno.io/title: Forbid root user
    policies.kyverno.io/severity: critical
    policies.kyverno.io/subject: Pod
    #pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/description: >-
      Pods must be required to run as non-root users. This policy ensures `runAsUser` is set to a number greater than zero `runAsNonRoot` equals to true
spec:
  validationFailureAction: Audit
  rules:
    - name: validate-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
        - resources:
            namespaces:
            - kube-system
      validate:
        message: "Using runAsUser: 0 is not allowed."
        cel:
          expressions:
          - expression: "object.spec.securityContext.runAsNonRoot != false && object.spec.securityContext.runAsUser != 0"
            message: "no root user"
