tests/policy-3/pod-success.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  namespace: test
spec:
  securityContext:
    runAsNonRoot: true
    runAsUser: 1000
  containers:
  - name: sec-ctx-demo
    image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox-system
  namespace: kube-system
spec:
  containers:
  - name: sec-ctx-demo
    image: busybox
